[lib]
proc-macro = true
name = "customized_attribute"
path = "src/lib.rs"

[package]
name = "rust-details"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
derive_more = { version = "1.0.0", features = ["from"]}
parking_lot = "0.12.1"
quote = "1.0.36"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
syn = { version = "2.0.66", features = ["full"] }
