[lib]
proc-macro = true
name = "customized_attribute"
path = "src/lib.rs"

[package]
name = "rust-details"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
derive_more = { version = "1.0.0", features = ["from"]}
futures = "0.3.31"
parking_lot = "0.12.1"
quote = "1.0.36"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.133"
syn = { version = "2.0.66", features = ["full"] }
tokio = { version = "1.41.1", features = ["full"] }
